--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2.4.2
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.PUSH_KEY }}
-	   known_hosts: ""
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
     - name: rsync over ssh
-      run: rsync -rP ./index.html ./css ./js ./static ./login okedikka.de@okedikka.de:/var/www/vhosts/okedikka.de/softeng.okedikka.de/
+      run: rsync -rv ./* sett@${{ secrets.SSH_HOST }}:/var/www/vhosts/${{ secrets.SSH_HOST }}/softeng.${{ secrets.SSH_HOST }}/
